--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,19 @@ p {
     margin-top: 60px;
     z-index: 1;
 }
+
+.letter {
+    margin: 0 2px;
+    font-size: 1em;
+    width: 25px;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .letter:first-child {
+    margin-left: 0;
+  }
+  
+  .letter:last-child {
+    margin-right: 0;
+  }
